--- a/Zensurrechner Console/Zensurrechner Console.csproj
+++ b/Zensurrechner Console/Zensurrechner Console.csproj
@@ -12,4 +12,10 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="data.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
