--- a/Zensurrechner Console/Zensurrechner Console.csproj
+++ b/Zensurrechner Console/Zensurrechner Console.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Terminal.Gui" Version="1.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="data.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
